# pyaedt

./: .python-version  pyproject.toml
.ci/: pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-release.yml  ci_cd.yml  label.yml  manual-build-wheelhouse.yml  manual_draft.yml  nightly-docs.yml  nightly-tests.yml  update-testmondata-cache.yml  weekly-tests.yml
src/ansys/aedt/core/: __init__.py
