[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyaedt"
dynamic = ["version"]
description = "High-level Python API for Ansys Electronics Desktop Framework"
readme = "README.md"
requires-python = ">=3.8,<4"

dependencies = [
    "tomli; python_version < '3.11'",
    "tomli-w",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme>=1.0.0,<1.5",
    "numpydoc>=1.5.0,<1.8",
]

[tool.setuptools.dynamic]
version = {attr = "ansys.aedt.core.__version__"}

[project.urls]
Bugs = "https://github.com/ansys/pyaedt/issues"
Documentation = "https://aedt.docs.pyansys.com"
Source = "https://github.com/ansys/pyaedt"
Discussions = "https://github.com/ansys/pyaedt/discussions"
Releases = "https://github.com/ansys/pyaedt/releases"
Changelog = "https://github.com/ansys/pyaedt/blob/main/doc/source/changelog.rst"
