[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pyaedt"
dynamic = ["version"]
description = "High-level Python API for Ansys Electronics Desktop Framework"
readme = "README.md"
requires-python = ">=3.8,<4"

dependencies = [
    "ansys-sphinx-theme>=1.0.0,<1.5",
]

[tool.setuptools.dynamic]
version = {attr = "ansys.aedt.core.__version__"}
